mm/fork: fix overflow in vma length when copying mmap on clone

--- a/src/app/item-edit/item-edit.component.scss
+++ b/src/app/item-edit/item-edit.component.scss
@@ -1,2 +1,10 @@
 h1{
-  
+    font-weight: 500;
+}
+
+.flex{
+    display: flex;
+    flex-direction: column;
+}
+
+but
